fixed text alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,10 @@ h3 {
   padding: 160px 5px;
 }
 
+.about-content {
+  text-align: left;
+}
+
 .about-section h1 {
   font-size: 64px;
 }
